# tocc

./: .gitignore  AUTHORS  CHANGELOG  CNAME  CONTRIBUTING  COPYING  README.md  contribution.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  uis.html
_static/: alabaster.css
cli/docs/: Makefile
cli/docs/source/: compile.rst  conf.py  index.rst  reference.rst
cli/src/: Makefile.am  TOCCFILES.DB  bootstrap  configure.ac  initializer.cpp  main.cpp
cli/src/actions/: action.cpp  action.h  all_tags_action.cpp  all_tags_action.h  assign_action.cpp  assign_action.h  print_action.cpp  print_action.h  remove_action.cpp  remove_action.h  set_title_action.cpp  set_title_action.h  tags_statistics_action.cpp  tags_statistics_action.h  unassign_action.cpp  unassign_action.h
cli/src/common/: cmd_param.h
cli/src/common/exceptions/: base_exception.cpp  base_exception.h  cmd_usage_exceptions.cpp  cmd_usage_exceptions.h
cli/src/engine/: cmd_manager.cpp  cmd_manager.h  singletons.cpp  singletons.h  wild_card_manager.cpp  wild_card_manager.h
cli/src/selectors/: id_selector.cpp  id_selector.h  import_file_selector.cpp  import_file_selector.h  query_selector.cpp  query_selector.h  selector.cpp  selector.h
cli/src/utilities/: cmd_parser.cpp  cmd_parser.h  errno_translator.cpp  errno_translator.h  file_system.cpp  file_system.h  string_utils.cpp  string_utils.h
cli/src/wild_cards/: asterisk_wild_card.cpp  asterisk_wild_card.h  wild_card.cpp  wild_card.h
developers/: coding_style.html  index.html  workflow.html
docs/_themes/alabaster/: LICENSE  navigation.html
docs/source/: conf.py  contribution.rst  index.rst  uis.rst
docs/source/developers/: coding_style.rst  index.rst  workflow.rst
docs/source/manual/: index.rst
docs/src/compiler/: CompilerStateMachine.odg
docs/src/design_overview/: abstract.tex  main.tex
docs/src/templates/: main_template_begin.tex
libtocc/docs/source/: api_reference.rst  compile.rst  conf.py  index.rst  overview.rst
libtocc/src/: Makefile  Makefile.am  bootstrap  check_exists.cpp  configure.ac  libtocc.h  libtocc.pc.in  unistdx.h
libtocc/src/common/: base_exception.h  database_exceptions.cpp  database_exceptions.h  expr_exceptions.cpp  expr_exceptions.h  file_system_exceptions.cpp  file_system_exceptions.h  int_file_info.cpp  int_file_info.h  runtime_exceptions.h
libtocc/src/database/: base23.cpp  base23.h  database.cpp  database.h  scripts.h
libtocc/src/database/exprs/: compiled_expr.cpp  compiled_expr.h  compiler.cpp  compiler.h  connectives.cpp  connectives.h  expr.h  fields.cpp  fields.h  functions.cpp  functions.h  operands.cpp  operands.h  query.cpp  query.h
libtocc/src/engine/: files_engine.cpp  files_engine.h  tags_engine.cpp  tags_engine.h
libtocc/src/file_system/: file_manager.cpp  file_manager.h  helpers.cpp
libtocc/src/front_end/: file_info.cpp  manager.cpp  manager.h
libtocc/src/libtocc/: check_exists.cpp
libtocc/src/libtocc/common/: base_exception.cpp  base_exception.h  database_exceptions.cpp  database_exceptions.h  expr_exceptions.cpp  expr_exceptions.h  file_system_exceptions.cpp  file_system_exceptions.h  int_file_info.cpp  int_file_info.h  runtime_exceptions.h
libtocc/src/libtocc/database/: base23.cpp  base23.h  base_exception.cpp  base_exception.h  database.cpp  database.h  database_exceptions.cpp  database_exceptions.h  expr_exceptions.cpp  expr_exceptions.h  file_system_exceptions.cpp  file_system_exceptions.h  funcs.cpp  funcs.h  int_file_info.cpp  int_file_info.h  runtime_exceptions.h  scripts.h
libtocc/src/libtocc/engine/: files_engine.cpp  files_engine.h  tags_engine.cpp  tags_engine.h
libtocc/src/libtocc/exprs/: compiled_expr.cpp  compiled_expr.h  compiled_expr_types.h  compiler.cpp  compiler.h  connectives.cpp  connectives.h  expr.h  fields.cpp  fields.h  functions.cpp  functions.h  operands.cpp  operands.h  operations.cpp  operations.h  query.cpp  query.h
libtocc/src/libtocc/file_system/: file_manager.cpp  file_manager.cpp.bak  file_manager.h  helpers.cpp  helpers.h
libtocc/src/libtocc/front_end/: file_info.cpp  file_info.h  manager.cpp  manager.h  tag_statistics.cpp  tag_statistics.h
libtocc/src/libtocc/utilities/: file_info_converter.cpp  file_info_converter.h  file_utils.cpp  file_utils.h
libtocc/src/utilities/: file_info_converter.cpp  file_info_converter.h
libtocc/tests/: Makefile  Makefile.am  bootstrap  config  configure.ac  constants.h  main.cpp  testdb_path.hpp
libtocc/tests/database/: basic_tests.cpp  database_basic_tests.cpp  database_initializer.cpp  duplicated_traditional_path_tests.cpp  expr_tests.cpp  find_empty_id_tests.cpp  get_file_tests.cpp  regex_tests.cpp  set_title_tests.cpp  tag_operation_tests.cpp  wild_card_tests.cpp
libtocc/tests/engine/: files_engine_tests.cpp  tags_engine_tests.cpp
libtocc/tests/file_system/: basic_tests.cpp  file_system_basic_tests.cpp
libtocc/tests/front_end/: file_info_tests.cpp  front_end_assign_tag_tests.cpp  front_end_assign_tag_wrong_tests.cpp  front_end_basic_tests.cpp  front_end_copy_file_tests.cpp  front_end_delete_file_tests.cpp  front_end_get_tests.cpp  front_end_import_file_tests.cpp  front_end_import_utf_file_tests.cpp  front_end_initializer.cpp  front_end_set_file_title.cpp  front_end_tag_statistics_tests.cpp  query_files_tests.cpp
libtocc/tests/utilities/: file_utils_tests.cpp
manual/: index.html
msvc/: libtocctests.sln  libtocctests.vcxproj
msvc/catch2/catch2/: catch2.vcxproj  catch2.vcxproj.filters
msvc/cli/cli/: cli.vcxproj  cli.vcxproj.filters
msvc/cli/tocc-initialize/: tocc-initialize.vcxproj  tocc-initialize.vcxproj.filters
msvc/libtocc/: libtocc.sln  libtocc.vcxproj  libtocc.vcxproj.filters
msvc/toccfs/: toccfs.vcxproj  toccfs.vcxproj.filters
msvc/unqlite/: unqlite.vcxproj  unqlite.vcxproj.filters
toccfs/docs/source/: compile.rst  conf.py  (+1 more)
toccfs/src/: Makefile.am  configure.ac  main.cpp
toccfs/src/engine/: fs_handler.cpp  fs_handler.h
toccfs/src/fuse/: fuse_interface.cpp  fuse_interface.h
toccfs/src/utils/: string_utils.cpp  string_utils.h
unqlite/: unqlite.h
(+2 files in other folders)
