## Makefile.am -- Process this file with automake to produce Makefile.in

# Output and source files.
bin_PROGRAMS = tocc
tocc_SOURCES = common/exceptions/base_exception.cpp common/exceptions/cmd_usage_exceptions.cpp utilities/errno_translator.cpp utilities/cmd_parser.cpp selectors/selector.cpp selectors/id_selector.cpp selectors/import_file_selector.cpp selectors/query_selector.cpp actions/action.cpp actions/print_action.cpp actions/assign_action.cpp actions/all_tags_action.cpp actions/remove_action.cpp engine/cmd_manager.cpp main.cpp

