## Makefile.am -- Process this file with automake to produce Makefile.in

# Output and source files.
bin_PROGRAMS = libtocctests
libtocctests_SOURCES = database/expr_tests.cpp database/get_file_tests.cpp database/database_basic_tests.cpp database/tag_operation_tests.cpp engine/files_engine_tests.cpp engine/tags_engine_tests.cpp file_system/file_system_basic_tests.cpp front_end/file_info_tests.cpp front_end/front_end_get_tests.cpp front_end/front_end_assign_tag_tests.cpp front_end/front_end_import_file_tests.cpp front_end/query_files_tests.cpp main.cpp


